@@ -48,6 +48,13 @@ CHANGES WITH 253 in spe:
         * systemd-fstab-generator now supports x-systemd.makefs option for
           /sysroot (in the initrd).
 
+        * The [DHCPv4] section in .network file gained new SocketPriority=
+          setting that assigns the Linux socket priority used by the DHCPv4
+          raw socket. Can be used in conjuntion with the EgressQOSMaps=setting in
+          [VLAN] section of .netdev file to send the desired ethernet 802.1Q frame
+          priority for DHCPv4 initial packets. This cannot be achieved with
+          netfilter mangle tables because of the raw socket bypass.
+
         Changes in udev:
 
         * The new net naming scheme "v253" has been introduced. In the new
